fix list itens align

--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -68,7 +68,3 @@
 .lista-container {
   width: 100%;
 }
-
-.lista {
-  border: 1px solid red;
-}
